--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,10 @@
   <div class="wrapper">
     <header class="header">
       <div id="menu" class="container header__container">
-        <button id="button-dogge" class="menu-dogge"></button>
+        <div class="wrapper">
+          <header class="header">
+            <div id="menu" class="container header__container">
+              <button id="menu-toggle" class="menu-toggle">☰</button>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
