--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header class="header">
       
       <div id="menu" class="container header__container">
+        <button id="menu-toggle" class="menu-toggle">☰</button>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
