--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__burger">
-          <div class="header__burger-el"></div>
-        </div>
+        
       </div>
     </header>
     <main class="main">
@@ -55,7 +53,7 @@
               рекомендации, примеры и задания, которые помогут в освоении теории по кибербезопасности. <br />
             </div>
 
-            <button class="button">Скачать квиз-игру</button>
+            <button id="downloadBtn" class="button">Скачать квиз-игру</button>
           </div>
           <div class="about__avatar">
             <img src="img/kb.jpg" alt="avatar" class="about__img" />
