--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
           <a href="work.html" class="nav__link">Дополнительные материалы</a>
         </li>
         <li class="nav__item">
-          <a href="blog.html" class="nav__link">Теоретический блок</a>
+          <a href="blog.html" class="nav__link">Теоретический блок</a>sw
         </li>
         <li class="nav__item">
           <a href="index.html" class="nav__link">Главная</a>
@@ -29,10 +29,6 @@
       </ul>
     </nav>
     
-    <div class="header__burger">
-      <div class="header__burger-el"></div>
-    </div>
-  </div>
   </header>
   <main class="main">
 
