--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      
+
       <div id="menu" class="container header__container">
         <button id="menu-toggle" class="menu-toggle">☰</button>
         <nav class="nav">
@@ -32,7 +32,7 @@
             </li>
           </ul>
         </nav>
-        
+
       </div>
     </header>
     <main class="main">
@@ -70,7 +70,7 @@
             <article class="recent-posts__article">
               <div class="recent-posts__subtitle"> <b>Шаг 1: Первое знакомство</b> </div>
               <div class="recent-posts__info">
-                12 Mar 2025
+                2025
                 <span class="recent-posts__separator">|</span>Tyumen, Russia
               </div>
               <div class="recent-posts__text">
@@ -87,7 +87,7 @@
               </div>
               <div class="recent-posts__info">
                 <div class="recent-posts__info">
-                  12 Mar 2025
+                  2025
                   <span class="recent-posts__separator">|</span>Tyumen, Russia
 
                 </div>
@@ -103,7 +103,7 @@
       </section>
       <section class="featured">
         <div class="container">
-          <div class="section-title">Ключевые разделы:</div>
+          <div class="section-title"></div>
           <div class="fetured__works">
             <article class="work">
               <div class="work__img-wrap">
@@ -113,12 +113,11 @@
                 <a href="#" class="work__title">Краткое описание</a>
                 <div class="work__subtitle">
                   <div class="work__date">1</div>
-                  <div class="work__category">Dashboard</div>
+                  <div class="work__category">Самая суть в доступном изложении</div>
                 </div>
                 <div class="work__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                  do amet sint. Velit officia consequat duis enim velit
-                  mollit. Exercitation veniam consequat sunt nostrud amet.
+                  Краткое описание выполняет несколько ключевых функций, особенно в
+                  образовательных и методических материалах.
                 </div>
               </div>
             </article>
@@ -130,12 +129,12 @@
                 <a href="#" class="work__title">Основные понятия</a>
                 <div class="work__subtitle">
                   <div class="work__date">2</div>
-                  <div class="work__category">Illustration</div>
+                  <div class="work__category">Термины кибербезопасности
+                  </div>
                 </div>
                 <div class="work__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                  do amet sint. Velit officia consequat duis enim velit
-                  mollit. Exercitation veniam consequat sunt nostrud amet.
+                  Фундамент, на котором строится понимание любой темы. Вот почему они так важны,
+                  особенно в обучающих материалах.
                 </div>
               </div>
             </article>
@@ -147,12 +146,11 @@
                 <a href="#" class="work__title">Практическое применение</a>
                 <div class="work__subtitle">
                   <div class="work__date">3</div>
-                  <div class="work__category">Typography</div>
+                  <div class="work__category">Четкие инструкции пользователя</div>
                 </div>
                 <div class="work__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                  do amet sint. Velit officia consequat duis enim velit
-                  mollit. Exercitation veniam consequat sunt nostrud amet.
+                  Мостик между теорией и реальной жизнью. Особенно в таких темах, как кибербезопасность, без практики
+                  знания остаются бесполезными.
                 </div>
               </div>
             </article>
