--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
-  <title>Портфолио</title>
+  <title>Хакни меня, если сможешь!</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
           <a href="work.html" class="nav__link">Дополнительные материалы</a>
         </li>
         <li class="nav__item">
-          <a href="blog.html" class="nav__link">Теоретический блок</a>sw
+          <a href="blog.html" class="nav__link">Теоретический блок</a>
         </li>
         <li class="nav__item">
           <a href="index.html" class="nav__link">Главная</a>
